<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0.30"
        android:layout_weight="8.0"
        android:id="@+id/alpha_ll"
        android:orientation="vertical"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2.0"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/bg_card_color">

        <TextView
            android:id="@+id/tv_coin_label"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/text_color"
            android:layout_marginTop="22dp"
            android:textSize="@dimen/font_size_xl"
            android:text="@string/str_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_below="@id/tv_coin_label"
            android:id="@+id/lv_view"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/view_label_layout"
            tools:itemCount="7"/>


        <LinearLayout
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginBottom="38dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.sl.ui.library.widget.material.MaterialButton
                android:id="@+id/bt_reset"
                android:background="@drawable/btn_round_border_yellow_bg"
                android:textColor="@color/main_yellow"
                android:textSize="@dimen/font_size"
                android:text="@string/str_reset"
                android:layout_weight="1"
                android:layout_marginRight="6dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                />



            <com.sl.ui.library.widget.material.MaterialButton
                android:id="@+id/tv_confirm"
                android:background="@drawable/btn_round_yellow_bg"
                android:text="@string/str_confirm"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size"
                android:layout_weight="1"
                android:layout_marginLeft="6dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>